// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TemplatePreview renders all fields 1`] = `
<div>
  <div
    class="TemplatePreview"
  >
    <div
      class="TemplatePreview__title"
    >
      title
    </div>
    <div
      class="TemplatePreview__body"
    >
      <div>
        html
      </div>
    </div>
    <div>
      {"files":[{"id":1,"size":"size","type":"type","name":"name","urlName":"urlName"}]}
    </div>
  </div>
</div>
`;

exports[`TemplatePreview renders only body 1`] = `
<div>
  <div
    class="TemplatePreview"
  >
    <div
      class="TemplatePreview__body"
    >
      <div>
        html
      </div>
    </div>
  </div>
</div>
`;
